--- a/GameJam/GameJam.vcxproj.filters
+++ b/GameJam/GameJam.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="header\Map.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="header\ECS.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets/sprite1.png">
