--- a/GameJam/GameJam.vcxproj
+++ b/GameJam/GameJam.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="source/Game.cpp" />
     <ClCompile Include="source/TextureManager.cpp" />
     <ClCompile Include="source/GameObject.cpp" />
+    <ClCompile Include="source\Collision.cpp" />
     <ClCompile Include="source\Map.cpp" />
     <ClCompile Include="source\Vector2D.cpp" />
   </ItemGroup>
@@ -170,6 +171,8 @@
     <ClInclude Include="header/Game.hpp" />
     <ClInclude Include="header/TextureManager.hpp" />
     <ClInclude Include="header/GameObject.hpp" />
+    <ClInclude Include="header\Collision.hpp" />
+    <ClInclude Include="header\ECS\ColliderComponent.hpp" />
     <ClInclude Include="header\ECS\Components.hpp" />
     <ClInclude Include="header\ECS\ECS.hpp" />
     <ClInclude Include="header\ECS\KeyboardController.hpp" />
