--- a/GameJam/GameJam.vcxproj.filters
+++ b/GameJam/GameJam.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClInclude Include="header\Collision.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="header\ECS\TileComponent.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets/sprite1.png">
